# searvey

./: .gitignore  .pre-commit-config.yaml  .prospector.yml  .readthedocs.yml  CERA_filter_STOFS_stations_from_searvey_csv.py  CERA_filter_STOFS_stations_from_searvey_json.py  CERA_get_active_stations.py  Makefile  README.md  environment.yml  mypy.ini  pyproject.toml  setup.py
.github/workflows/: build.yml  install_from_pypi.yml  run_tests.yml
binder/: environment.yml  postBuild
docs/source/: chs.rst  conf.py  coops.rst  high_level_api.rst  index.rst  installation.rst  ioc.rst  ndbc.rst  usace.rst  usgs.rst  utils.rst
examples/: CERA_workflow.ipynb  IOC_data.ipynb  NDBC_data.ipynb  USACE_data.ipynb  USGS_by_id.ipynb  USGS_data.ipynb  chs_data.ipynb  coops_data.ipynb
requirements/: requirements-dev.txt  requirements.txt
searvey/: __init__.py  _chs_api.py  _common.py  _coops_api.py  _ioc_api.py  _ndbc_api.py  _usace_api.py  coops.py  critech.py  custom_types.py  erddap.py  ioc.py  models.py  multi.py  rate_limit.py  station.py  stations.py  uhslc.py  us_states.json  usgs.py  utils.py
searvey/coops/: __init__.py  station.py  tidalstations.py
tests/: chs_test.py  common_test.py  conftest.py  coops_test.py  critech_test.py  erddap_test.py  import_test.py  ioc_api_test.py  ioc_test.py  multi_test.py  ndbc_test.py  rate_limit_test.py  stations_test.py  test_coops.py  uhslc_test.py  usace_test.py  usgs_test.py  utils_test.py
tests/cassettes/coops_test/: test_coops_predictions_product.yaml  test_coops_product_within_region.yaml  test_coops_station.yaml  test_coops_stations.yaml  test_coops_stations_new_api.yaml  test_coops_stations_nws_api.yaml  test_coops_stations_within_region.yaml
tests/cassettes/critech_test/: test_get_critech_data.yaml
tests/cassettes/ioc_test/: test_get_ioc_station_data[truncate_seconds=False].yaml  test_get_ioc_station_data[truncate_seconds=True].yaml  test_get_ioc_stations.yaml
tests/cassettes/ndbc_test/: test_get_ndbc_stations.yaml  test_get_ndbc_stations_within_box.yaml
tests/cassettes/uhslc_test/: test_get_uhslc_data.yaml
tests/cassettes/usgs_test/: TestGetStationsByDirectQuery.test_get_usgs_stations_by_bbox.yaml  TestGetStationsByDirectQuery.test_get_usgs_stations_by_bbox_has_state_info.yaml  TestGetStationsByDirectQuery.test_get_usgs_stations_by_site_nos.yaml  TestGetStationsByDirectQuery.test_get_usgs_stations_by_site_nos_has_state_info.yaml  TestGetStationsByDirectQuery.test_get_usgs_stations_by_site_nos_with_availability.yaml  test_get_usgs_data.yaml  test_get_usgs_station_data.yaml  test_get_usgs_station_data_by_string_enddate.yaml  test_request_nonexistant_data.yaml
