[tool.poetry]
name = "searvey"
version = "0.2.1"
description = ""
authors = [
    "Panos Mavrogiorgos <pmav99@gmail.com>",
    "Zachary Burnett <zachary.r.burnett@gmail.com>",
]
license = 'GPL-3.0-or-later'
readme = "README.md"
repository = "https://github.com/oceanmodeling/searvey.git"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
erddapy = "*"
pandas = "*"
pydantic = "*"
requests = "*"
beautifulsoup4 = "*"
geopandas = "*"
typepigeon = "*"
xarray = "*"
Shapely = "*"
limits = "*"
tqdm = "*"
html5lib = "*"
numpy = "*"
lxml = "*"

[tool.poetry.dev-dependencies]
mypy = ">=0.991"
pre-commit = ">=2.0"
prospector = "<1.8"   # due to https://github.com/PyCQA/prospector/issues/557
pytest = ">=6.0"
pytest-xdist = "*"
pytest-cov = ">=3.0"
pytest-recording = "*"
types-requests = "*"
sphinx = '*'
sphinx-rtd-theme = '*'
dunamai = "*"
m2r2 = "*"
deptry = "*"
toml = "*"

[tool.black]
line-length = 108
target-version = ['py39']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --verbose --showlocals --tb=short"
testpaths = ["tests"]
log_cli = true
filterwarnings = [
    'ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning',
]


[tool.mypy]
python_version = "3.9"
plugins = ["pydantic.mypy"]
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
strict = true
ignore_missing_imports = true

# FIXME These errors get thrown by `searvey/coops.py`
# I can't find a way to disable them on a per-module basis, so we are disabling them globally.
# We should comment them out one by one, run `make mypy`, fix the errors and move on.
disable_error_code = [
    "assignment",
    "override",
    "attr-defined",
    "no-any-return",
    "unreachable",
]

# mypy per-module options:
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


[tool.deptry]
ignore_obsolete = []
ignore_missing = [
  'CERA_get_active_stations'
]
ignore_transitive = []
ignore_misplaced_dev = [
  'dunamai',
  'pytest',
  'toml',
]
