[tool.poetry]
name = "searvey"
version = "0.0.0" # overwritten by poetry-dynamic-versioning plugin
description = "Sea state observational data retrieval"
authors = [
    "Panos Mavrogiorgos <pmav99@gmail.com>",
    "Zachary Burnett <zachary.r.burnett@gmail.com>",
    "Soroosh Mani <soroosh.mani@noaa.gov>",
]
license = 'GPL-3.0-or-later'
readme = "README.md"
repository = "https://github.com/oceanmodeling/searvey.git"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
beautifulsoup4 = "*"
dataretrieval = ">=1"
deprecated = "*"
erddapy = "*"
geopandas = "*"
html5lib = "*"
httpx = "*"
limits = "*"
lxml = {version = "*", extras = ["html_clean"]}
multifutures = {version = "*"}
numpy = "*"
pandas = "*"
pydantic = ">2"
requests = "*"
Shapely = "*"
tenacity = "*"
tqdm = "*"
typing-extensions = "*"
xarray = "*"

[tool.poetry.group.dev.dependencies]
covdefaults = "*"
coverage = {version = "*", extras = ["toml"]}
mypy = ">=1"
nbconvert = "*"
pytest = "*"
pytest-cov = ">=3.0"
pytest-recording = "*"
pytest-xdist = "*"
types-deprecated = "*"
types-requests = "*"
urllib3 = "<2"   # https://github.com/kevin1024/vcrpy/issues/688

[tool.poetry.group.docs.dependencies]
dunamai = "*"
furo = "*"
m2r2 = ">=0.3.2"
setuptools = "*"
sphinx = "*"
sphinxext-opengraph = "*"
toml = "*"

[tool.poetry.group.jupyter.dependencies]
ipykernel = "*"
matplotlib = "*"
scipy = "*"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning",
]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 108
target-version = ['py39']

[tool.pytest.ini_options]
addopts = "-ra --verbose --showlocals --tb=short"
testpaths = ["tests"]
log_cli = true
filterwarnings = [
    'ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
    'ignore::DeprecationWarning',
]

[tool.mypy]
python_version = "3.9"
plugins = ["pydantic.mypy"]
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
strict = true
ignore_missing_imports = true

# FIXME These errors get thrown by `searvey/coops.py`
# I can't find a way to disable them on a per-module basis, so we are disabling them globally.
# We should comment them out one by one, run `make mypy`, fix the errors and move on.
disable_error_code = [
    "assignment",
    "override",
    "attr-defined",
    "no-any-return",
    "unreachable",
]

# mypy per-module options:
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
target-version = "py39"
line-length = 108
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "C90",  # mccabe
]
ignore = [
    "E501", # line-too-long
]

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["searvey"]
concurrency = [
  "multiprocessing",
  "thread",
]
parallel = true
sigterm = true

[tool.coverage.report]
fail_under = 89
